// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alias transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "alias": "wykop.pl",
    "fee": "0.001",
    "height": 922106,
    "id": "21BmkGpk98wWHrCydjwTFvHWPfQxtH5NEQd9X7wUpi5R",
    "proofs": Array [
      "54qNaDCCC3LoprhNcd6C4ytRbB2chDpYxEusmyVgmPg7PNQjvi7Ckc13mBn1M3zf8T5YgzfWDMnvE9rRLYyGSkSu",
    ],
    "sender": "3P2DQSKgE7Hw9VhHfu5TkJxsh5GFRfShQpK",
    "senderPublicKey": "FTY2T2HLvyR7XQTvn5Eu56B8qGXcvosutTRq5TatcTMp",
    "signature": "54qNaDCCC3LoprhNcd6C4ytRbB2chDpYxEusmyVgmPg7PNQjvi7Ckc13mBn1M3zf8T5YgzfWDMnvE9rRLYyGSkSu",
    "timestamp": 2018-03-17T20:22:43.701Z,
    "type": 10,
    "version": 1,
  },
}
`;

exports[`alias transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "alias": "wykop.pl",
        "fee": "0.001",
        "height": 922106,
        "id": "21BmkGpk98wWHrCydjwTFvHWPfQxtH5NEQd9X7wUpi5R",
        "proofs": Array [
          "54qNaDCCC3LoprhNcd6C4ytRbB2chDpYxEusmyVgmPg7PNQjvi7Ckc13mBn1M3zf8T5YgzfWDMnvE9rRLYyGSkSu",
        ],
        "sender": "3P2DQSKgE7Hw9VhHfu5TkJxsh5GFRfShQpK",
        "senderPublicKey": "FTY2T2HLvyR7XQTvn5Eu56B8qGXcvosutTRq5TatcTMp",
        "signature": "54qNaDCCC3LoprhNcd6C4ytRbB2chDpYxEusmyVgmPg7PNQjvi7Ckc13mBn1M3zf8T5YgzfWDMnvE9rRLYyGSkSu",
        "timestamp": 2018-03-17T20:22:43.701Z,
        "type": 10,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "alias": "wykop",
        "fee": "0.001",
        "height": 922106,
        "id": "HbgSfoQ7ftAF3TUQNovbFnohsRK7AdztFznrJHTqH7F7",
        "proofs": Array [
          "4oA22v2NsNNJafLJVEqwSJF74XvN1pxh9d72k2pe8kheMjrTf8E4exLUGAoGKKrZYcw9UzxVgFoeNNBQjcqRajHW",
        ],
        "sender": "3P2DQSKgE7Hw9VhHfu5TkJxsh5GFRfShQpK",
        "senderPublicKey": "FTY2T2HLvyR7XQTvn5Eu56B8qGXcvosutTRq5TatcTMp",
        "signature": "4oA22v2NsNNJafLJVEqwSJF74XvN1pxh9d72k2pe8kheMjrTf8E4exLUGAoGKKrZYcw9UzxVgFoeNNBQjcqRajHW",
        "timestamp": 2018-03-17T20:22:39.158Z,
        "type": 10,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`all transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "0.007",
    "assetId": "WAVES",
    "attachment": "",
    "fee": "0.001",
    "feeAsset": "WAVES",
    "height": 240868,
    "id": "Co8JB3md1hsnFKYS2xonipBFyQcB7qskyosoJf6YhBi1",
    "recipient": "3PJkWhTJXrYWiSj6sxv9aoUrzoBbGZmzvQf",
    "sender": "3P2b1YqpGNb57ftMQN5be25iKowq65GmkZ7",
    "senderPublicKey": "J9LBb9ZixtDiLFxXocGXt69JU5vConrGYh7yM1mnAPWQ",
    "signature": "4QgAFzCvEhMEEWuYvuPU8tw4bhSKzrfFW2RrhkEYFc82EVdmUV7HqRehpTxsvQ9V2dYd4yp4Ezez9RqVwDSKr2uz",
    "timestamp": 2016-11-21T07:01:42.156Z,
    "type": 4,
    "version": 1,
  },
}
`;

exports[`all transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "0.007",
        "assetId": "WAVES",
        "attachment": "",
        "fee": "0.001",
        "feeAsset": "WAVES",
        "height": 240868,
        "id": "Co8JB3md1hsnFKYS2xonipBFyQcB7qskyosoJf6YhBi1",
        "recipient": "3PJkWhTJXrYWiSj6sxv9aoUrzoBbGZmzvQf",
        "sender": "3P2b1YqpGNb57ftMQN5be25iKowq65GmkZ7",
        "senderPublicKey": "J9LBb9ZixtDiLFxXocGXt69JU5vConrGYh7yM1mnAPWQ",
        "signature": "4QgAFzCvEhMEEWuYvuPU8tw4bhSKzrfFW2RrhkEYFc82EVdmUV7HqRehpTxsvQ9V2dYd4yp4Ezez9RqVwDSKr2uz",
        "timestamp": 2016-11-21T07:01:42.156Z,
        "type": 4,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "company",
            "type": "string",
            "value": "Resonova",
          },
        ],
        "fee": "0.001",
        "height": 1060009,
        "id": "AkM4bQ5dVkqWezSgMPdW5iieX98xDsiFjVDbEddntGNv",
        "proofs": Array [
          "2BFgwFEUwDYmCPdUbrX3W4QdPrcDX4ai6tmrY2ab4NgEg9aikUo7RzqHUsgBd5kBpFScxsLQWpE29k9cLPdF5YEt",
        ],
        "sender": "3PLZcCJyYQnfWfzhKXRA4rteCQC9J1ewf5K",
        "senderPublicKey": "BQMVwAHwf2WEEwRsCxtMVcSLrXUhJ3XtCLmSptLx2e6L",
        "timestamp": 2018-06-28T02:12:41.449Z,
        "type": 12,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`all.commonData transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "id": "Co8JB3md1hsnFKYS2xonipBFyQcB7qskyosoJf6YhBi1",
    "timestamp": 2016-11-21T07:01:42.156Z,
    "type": 4,
  },
}
`;

exports[`all.commonData transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "id": "Co8JB3md1hsnFKYS2xonipBFyQcB7qskyosoJf6YhBi1",
        "timestamp": 2016-11-21T07:01:42.156Z,
        "type": 4,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "id": "AkM4bQ5dVkqWezSgMPdW5iieX98xDsiFjVDbEddntGNv",
        "timestamp": 2018-06-28T02:12:41.449Z,
        "type": 12,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`burn transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "1e-8",
    "assetId": "AJ3agSmwrBdnqREqFUXkP8fbG687BbHwJnfUdNum2KLM",
    "fee": "0.01",
    "height": 442917,
    "id": "41wEWfP9wMQLJViYTfmE7797fWeZJwTXsk43oUgqZ1WZ",
    "sender": "3P5c9q348YEZv1fVwHo8476Z1MHDyH2gB3G",
    "senderPublicKey": "XiHyJgKoAXcEz41QsHwXyDmWVzsUSb2gem3Q4EN8z2m",
    "signature": "3aAxBwPumxSDXauncWK1dPcbgBAoPiVcXQP3nP9S96Y3QBdm3udDKrimU8rgUB8wKsYSQ2ZY3vbryRt9uu8EioVW",
    "timestamp": 2017-04-08T08:51:40.476Z,
    "type": 6,
    "version": 1,
  },
}
`;

exports[`burn transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "1e-8",
        "assetId": "AJ3agSmwrBdnqREqFUXkP8fbG687BbHwJnfUdNum2KLM",
        "fee": "0.01",
        "height": 442917,
        "id": "41wEWfP9wMQLJViYTfmE7797fWeZJwTXsk43oUgqZ1WZ",
        "sender": "3P5c9q348YEZv1fVwHo8476Z1MHDyH2gB3G",
        "senderPublicKey": "XiHyJgKoAXcEz41QsHwXyDmWVzsUSb2gem3Q4EN8z2m",
        "signature": "3aAxBwPumxSDXauncWK1dPcbgBAoPiVcXQP3nP9S96Y3QBdm3udDKrimU8rgUB8wKsYSQ2ZY3vbryRt9uu8EioVW",
        "timestamp": 2017-04-08T08:51:40.476Z,
        "type": 6,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "1e-8",
        "assetId": "AJ3agSmwrBdnqREqFUXkP8fbG687BbHwJnfUdNum2KLM",
        "fee": "0.001",
        "height": 442917,
        "id": "CTgfKGmiu12FPgyuhmqaKvXWrDGYqWwtHemqn8par82Y",
        "sender": "3P5c9q348YEZv1fVwHo8476Z1MHDyH2gB3G",
        "senderPublicKey": "XiHyJgKoAXcEz41QsHwXyDmWVzsUSb2gem3Q4EN8z2m",
        "signature": "2vTAseut4nXWrqujjk1GJ6MdPyKrbc2xDjcDdYtarAYhXvX4FsfmFq6rYDfdV2guPwaE7Se4Yz3vPJP2yQJXzeYZ",
        "timestamp": 2017-04-08T08:51:56.831Z,
        "type": 6,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`data transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "data": Array [
      Object {
        "key": "company",
        "type": "string",
        "value": "Resonova",
      },
    ],
    "fee": "0.001",
    "height": 1060009,
    "id": "AkM4bQ5dVkqWezSgMPdW5iieX98xDsiFjVDbEddntGNv",
    "proofs": Array [
      "2BFgwFEUwDYmCPdUbrX3W4QdPrcDX4ai6tmrY2ab4NgEg9aikUo7RzqHUsgBd5kBpFScxsLQWpE29k9cLPdF5YEt",
    ],
    "sender": "3PLZcCJyYQnfWfzhKXRA4rteCQC9J1ewf5K",
    "senderPublicKey": "BQMVwAHwf2WEEwRsCxtMVcSLrXUhJ3XtCLmSptLx2e6L",
    "timestamp": 2018-06-28T02:12:41.449Z,
    "type": 12,
    "version": 1,
  },
}
`;

exports[`data transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "company",
            "type": "string",
            "value": "Resonova",
          },
        ],
        "fee": "0.001",
        "height": 1060009,
        "id": "AkM4bQ5dVkqWezSgMPdW5iieX98xDsiFjVDbEddntGNv",
        "proofs": Array [
          "2BFgwFEUwDYmCPdUbrX3W4QdPrcDX4ai6tmrY2ab4NgEg9aikUo7RzqHUsgBd5kBpFScxsLQWpE29k9cLPdF5YEt",
        ],
        "sender": "3PLZcCJyYQnfWfzhKXRA4rteCQC9J1ewf5K",
        "senderPublicKey": "BQMVwAHwf2WEEwRsCxtMVcSLrXUhJ3XtCLmSptLx2e6L",
        "timestamp": 2018-06-28T02:12:41.449Z,
        "type": 12,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "Hello",
            "type": "string",
            "value": "Hello, Waves!",
          },
          Object {
            "key": "When Moon?",
            "type": "string",
            "value": "Soon",
          },
        ],
        "fee": "0.001",
        "height": 1060097,
        "id": "FKL7UhhmV7WnaQh72zb3WeyF7uyBBh47kvdVXqwDoKvS",
        "proofs": Array [
          "2KoLxovNxv1aJ6WSt8WugGRUkcPH6qCQ9DNZgm9bhdEDgD9kDFTbjyPK2guVuup7Dvbee9rMS5t5z6Ff1o3FUu4m",
        ],
        "sender": "3PCP7LeMmWdesQsL3TuHvQwD4a31zjZpU1R",
        "senderPublicKey": "7p8Vzpc27wt567kdCJ6YsTkpukzfJ7XLnK9M3W1qQ1GK",
        "timestamp": 2018-06-28T03:38:59.447Z,
        "type": 12,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`exchange transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "0.0001",
    "buyMatcherFee": "0.01",
    "fee": "0.001",
    "height": 435197,
    "id": "FU5mCVTaa83TPMx4fj1F7bL6ZAfpMKcPpDDvhvxCD557",
    "order1": Object {
      "amount": "0.0001",
      "assetPair": Object {
        "amountAsset": "8LQW8f7P5d5PZM7GtZEBgaqRPGSzS3DfPuiXrURJ4AJS",
        "priceAsset": "WAVES",
      },
      "expiration": 2017-04-05T01:19:52.031Z,
      "id": "LGzcHf1Pq9ZTfF4kQ4PdXyCuBuMRy9ksKxzDxkn9Js9",
      "matcherFee": "0.01",
      "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
      "orderType": "buy",
      "price": "0.3",
      "sender": "3PJUhtX97wj2nCGmN8tYWQ9e9FAu6wVsqQL",
      "senderPublicKey": "CHnZGZ8QBjeDTeaPqg8zirAR8wB6xfAap8echHrLz2Zw",
      "signature": "5odnp8FcvrsPjQEM7d6bKcEYBVKRKmw526WAruaQtwJUS1i92GU8DXY4p7y4nP1ae7ktbEo7Wbm4XVVxuvadcsuT",
      "timestamp": 2017-04-03T01:19:52.031Z,
    },
    "order2": Object {
      "amount": "0.0001",
      "assetPair": Object {
        "amountAsset": "8LQW8f7P5d5PZM7GtZEBgaqRPGSzS3DfPuiXrURJ4AJS",
        "priceAsset": "WAVES",
      },
      "expiration": 2017-04-05T01:19:35.756Z,
      "id": "3PwJzq7N5KhsfLwnKFxwvpNGfqhqPNiAry8ZirPBP8aT",
      "matcherFee": "0.01",
      "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
      "orderType": "sell",
      "price": "0.3",
      "sender": "3PC7nLe5w5JfjicofJaHzD6sH7ZF8GtdnQp",
      "senderPublicKey": "7TGcKbAEnxWEfL9ymyRFCjf7MLnqiTWTF8Nr526qV5gz",
      "signature": "23oQi7T47j8dmJiv9vMUt4SJYv83s7TVm6x1or7bCU11KHAoi8zCDhjxPGkm3JcEEvytyp5y1wVRewpZ1E3RxsLQ",
      "timestamp": 2017-04-03T01:19:35.756Z,
    },
    "price": "0.3",
    "sellMatcherFee": "0.01",
    "sender": "3PLabmVKpBGibMMMJcM1dwS3F17MF6Pf6Xf",
    "senderPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
    "signature": "AhSqQoFBtEiJjXZWPsZ8zLTRj5aycU4oqtr2vKnBJ56xwce161MxPUuRZFfFgYpLNMhTqe7me3F8LfpoarBLMdP",
    "timestamp": 2017-04-03T01:19:53.952Z,
    "type": 7,
  },
}
`;

exports[`exchange transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "0.0001",
        "buyMatcherFee": "0.01",
        "fee": "0.001",
        "height": 435197,
        "id": "FU5mCVTaa83TPMx4fj1F7bL6ZAfpMKcPpDDvhvxCD557",
        "order1": Object {
          "amount": "0.0001",
          "assetPair": Object {
            "amountAsset": "8LQW8f7P5d5PZM7GtZEBgaqRPGSzS3DfPuiXrURJ4AJS",
            "priceAsset": "WAVES",
          },
          "expiration": 2017-04-05T01:19:52.031Z,
          "id": "LGzcHf1Pq9ZTfF4kQ4PdXyCuBuMRy9ksKxzDxkn9Js9",
          "matcherFee": "0.01",
          "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
          "orderType": "buy",
          "price": "0.3",
          "sender": "3PJUhtX97wj2nCGmN8tYWQ9e9FAu6wVsqQL",
          "senderPublicKey": "CHnZGZ8QBjeDTeaPqg8zirAR8wB6xfAap8echHrLz2Zw",
          "signature": "5odnp8FcvrsPjQEM7d6bKcEYBVKRKmw526WAruaQtwJUS1i92GU8DXY4p7y4nP1ae7ktbEo7Wbm4XVVxuvadcsuT",
          "timestamp": 2017-04-03T01:19:52.031Z,
        },
        "order2": Object {
          "amount": "0.0001",
          "assetPair": Object {
            "amountAsset": "8LQW8f7P5d5PZM7GtZEBgaqRPGSzS3DfPuiXrURJ4AJS",
            "priceAsset": "WAVES",
          },
          "expiration": 2017-04-05T01:19:35.756Z,
          "id": "3PwJzq7N5KhsfLwnKFxwvpNGfqhqPNiAry8ZirPBP8aT",
          "matcherFee": "0.01",
          "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
          "orderType": "sell",
          "price": "0.3",
          "sender": "3PC7nLe5w5JfjicofJaHzD6sH7ZF8GtdnQp",
          "senderPublicKey": "7TGcKbAEnxWEfL9ymyRFCjf7MLnqiTWTF8Nr526qV5gz",
          "signature": "23oQi7T47j8dmJiv9vMUt4SJYv83s7TVm6x1or7bCU11KHAoi8zCDhjxPGkm3JcEEvytyp5y1wVRewpZ1E3RxsLQ",
          "timestamp": 2017-04-03T01:19:35.756Z,
        },
        "price": "0.3",
        "sellMatcherFee": "0.01",
        "sender": "3PLabmVKpBGibMMMJcM1dwS3F17MF6Pf6Xf",
        "senderPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
        "signature": "AhSqQoFBtEiJjXZWPsZ8zLTRj5aycU4oqtr2vKnBJ56xwce161MxPUuRZFfFgYpLNMhTqe7me3F8LfpoarBLMdP",
        "timestamp": 2017-04-03T01:19:53.952Z,
        "type": 7,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "1000",
        "buyMatcherFee": "0.001",
        "fee": "0.001",
        "height": 435226,
        "id": "4ZXpBjWJRFWaJhq9P2WUgW7N7F5h1poeJyQSfBpJuwfb",
        "order1": Object {
          "amount": "1000",
          "assetPair": Object {
            "amountAsset": "AnERqFRffNVrCbviXbDEdzrU6ipXCP5Y1PKpFdRnyQAy",
            "priceAsset": "WAVES",
          },
          "expiration": 2017-05-03T01:49:41.493Z,
          "id": "5W4vq1FMuWhpVtbR1zYDS94gKmnaPUo5EJLQprEuabPE",
          "matcherFee": "0.001",
          "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
          "orderType": "buy",
          "price": "0.01",
          "sender": "3PJUhtX97wj2nCGmN8tYWQ9e9FAu6wVsqQL",
          "senderPublicKey": "CHnZGZ8QBjeDTeaPqg8zirAR8wB6xfAap8echHrLz2Zw",
          "signature": "pya3Q2ToufjKx3pEKfZZQY2pseFxS9Md1p3muRTNrLBbSyBFZx9CtDJJEr8w7h9Q785RFzYUwvZmGgUsqf1V2rm",
          "timestamp": 2017-04-03T01:49:41.493Z,
        },
        "order2": Object {
          "amount": "1000",
          "assetPair": Object {
            "amountAsset": "AnERqFRffNVrCbviXbDEdzrU6ipXCP5Y1PKpFdRnyQAy",
            "priceAsset": "WAVES",
          },
          "expiration": 2017-05-03T01:49:32.461Z,
          "id": "8GHeA16FsaBLpuq4tu5cxfRDBAhhHyntbfhY3vTikzmE",
          "matcherFee": "0.001",
          "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
          "orderType": "sell",
          "price": "0.01",
          "sender": "3PC7nLe5w5JfjicofJaHzD6sH7ZF8GtdnQp",
          "senderPublicKey": "7TGcKbAEnxWEfL9ymyRFCjf7MLnqiTWTF8Nr526qV5gz",
          "signature": "557FHuHScvYZB5q3ePV5hZa8QxTnM73BiBn5hVw7yF4nHGgC3u6hQjKsEfenSNchLZhh573PMJzQnD3bdqvGCFFS",
          "timestamp": 2017-04-03T01:49:32.461Z,
        },
        "price": "0.01",
        "sellMatcherFee": "0.001",
        "sender": "3PLabmVKpBGibMMMJcM1dwS3F17MF6Pf6Xf",
        "senderPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
        "signature": "5TVru2nrRuLatmyXXJin1HzotUEjZ1umsc98zM35teQfd91oK1EQcFuK2ajWfsJyv5GmyGYvQypgvkLaFzyL1gow",
        "timestamp": 2017-04-03T01:49:42.898Z,
        "type": 7,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`genesis transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "99999995",
    "fee": "0",
    "height": 1,
    "id": "2DVtfgXjpMeFf2PQCqvwxAiaGbiDsxDjSdNQkc5JQ74eWxjWFYgwvqzC4dn7iB1AhuM32WxEiVi1SGijsBtYQwn8",
    "recipient": "3PAWwWa6GbwcJaFzwqXQN5KQm7H96Y7SHTQ",
    "signature": "2DVtfgXjpMeFf2PQCqvwxAiaGbiDsxDjSdNQkc5JQ74eWxjWFYgwvqzC4dn7iB1AhuM32WxEiVi1SGijsBtYQwn8",
    "timestamp": 2016-06-12T11:42:57.614Z,
    "type": 1,
  },
}
`;

exports[`genesis transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "99999995",
        "fee": "0",
        "height": 1,
        "id": "2DVtfgXjpMeFf2PQCqvwxAiaGbiDsxDjSdNQkc5JQ74eWxjWFYgwvqzC4dn7iB1AhuM32WxEiVi1SGijsBtYQwn8",
        "recipient": "3PAWwWa6GbwcJaFzwqXQN5KQm7H96Y7SHTQ",
        "signature": "2DVtfgXjpMeFf2PQCqvwxAiaGbiDsxDjSdNQkc5JQ74eWxjWFYgwvqzC4dn7iB1AhuM32WxEiVi1SGijsBtYQwn8",
        "timestamp": 2016-06-12T11:42:57.614Z,
        "type": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "1",
        "fee": "0",
        "height": 1,
        "id": "2TsxPS216SsZJAiep7HrjZ3stHERVkeZWjMPFcvMotrdGpFa6UCCmoFiBGNizx83Ks8DnP3qdwtJ8WFcN9J4exa3",
        "recipient": "3P8JdJGYc7vaLu4UXUZc1iRLdzrkGtdCyJM",
        "signature": "2TsxPS216SsZJAiep7HrjZ3stHERVkeZWjMPFcvMotrdGpFa6UCCmoFiBGNizx83Ks8DnP3qdwtJ8WFcN9J4exa3",
        "timestamp": 2016-06-12T11:42:57.614Z,
        "type": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`issue transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "assetId": "CeFjjLBxhpj1vsF832KC6SXEHicc1a2gUJMzaAZGHUJ7",
    "decimals": 8,
    "description": "http://coremedia.info/ Harnessing the Benefits of Technology for the Good of Humanity ",
    "fee": "1",
    "height": 236967,
    "id": "CeFjjLBxhpj1vsF832KC6SXEHicc1a2gUJMzaAZGHUJ7",
    "name": "CORE",
    "quantity": "0.01",
    "reissuable": false,
    "script": null,
    "sender": "3P7HKYe6HB8eK7uXxrztEYUSzZQyyYRnWHg",
    "senderPublicKey": "9ASL55YRs78rW5hjRAgjyWww7QqP99HwuB8dG6AqtnFm",
    "signature": "iN5XQwAAQN1ySVF7BwV8ash6sEW7b1zCH8XhYBDbqZwPMeZHQyvNJtjq46Q9VCDjPv4UV2rFCKvdyev35dTUKAX",
    "timestamp": 2016-11-18T15:31:05.875Z,
    "type": 3,
    "version": 1,
  },
}
`;

exports[`issue transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "CeFjjLBxhpj1vsF832KC6SXEHicc1a2gUJMzaAZGHUJ7",
        "decimals": 8,
        "description": "http://coremedia.info/ Harnessing the Benefits of Technology for the Good of Humanity ",
        "fee": "1",
        "height": 236967,
        "id": "CeFjjLBxhpj1vsF832KC6SXEHicc1a2gUJMzaAZGHUJ7",
        "name": "CORE",
        "quantity": "0.01",
        "reissuable": false,
        "script": null,
        "sender": "3P7HKYe6HB8eK7uXxrztEYUSzZQyyYRnWHg",
        "senderPublicKey": "9ASL55YRs78rW5hjRAgjyWww7QqP99HwuB8dG6AqtnFm",
        "signature": "iN5XQwAAQN1ySVF7BwV8ash6sEW7b1zCH8XhYBDbqZwPMeZHQyvNJtjq46Q9VCDjPv4UV2rFCKvdyev35dTUKAX",
        "timestamp": 2016-11-18T15:31:05.875Z,
        "type": 3,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "5ZUsD93EbK1SZZa2GXYZx3SjhcXWDvMKqzWoJZjNGkW8",
        "decimals": 8,
        "description": "http://coremedia.info/ Harnessing the Benefits of Technology for the Good of Humanity ",
        "fee": "1",
        "height": 236970,
        "id": "5ZUsD93EbK1SZZa2GXYZx3SjhcXWDvMKqzWoJZjNGkW8",
        "name": "CoreMedia",
        "quantity": "0.01",
        "reissuable": false,
        "script": null,
        "sender": "3P7HKYe6HB8eK7uXxrztEYUSzZQyyYRnWHg",
        "senderPublicKey": "9ASL55YRs78rW5hjRAgjyWww7QqP99HwuB8dG6AqtnFm",
        "signature": "MwtQXaycbwF3ZUQyZJ6f2viA7UEZx7esH8ysgc2WsLYtNKx7L7oPJ3XDLCSUebY96hfFqPYbEiWnE5gDJibf1YS",
        "timestamp": 2016-11-18T15:33:07.893Z,
        "type": 3,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`lease transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "42255.1861538",
    "fee": "0.001",
    "height": 435592,
    "id": "CQ1AAooHc3kK81Gk3NY7Y9ewsDhQqRpiito4pm64NkS9",
    "recipient": "3PE9guSrrV1vLCjtbUQrgJbtkaFKPJahras",
    "sender": "3PJmhjaryzfWsbkrnBUfwqfzv1YNtLaHua5",
    "senderPublicKey": "3a5enbcYnahZCWBAvRPp7fmQoz7C6p4afNQgLAkZZqWx",
    "signature": "3dZpxCJYmmdQJqYmidQy7Jxzg8pgLpEF37wLT7TQEHhSi93gC84W2tUACrEqidhmEVbN3JiA2hVTuQB35s27cfMt",
    "timestamp": 2017-04-03T07:59:27.607Z,
    "type": 8,
    "version": 1,
  },
}
`;

exports[`lease transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "42255.1861538",
        "fee": "0.001",
        "height": 435592,
        "id": "CQ1AAooHc3kK81Gk3NY7Y9ewsDhQqRpiito4pm64NkS9",
        "recipient": "3PE9guSrrV1vLCjtbUQrgJbtkaFKPJahras",
        "sender": "3PJmhjaryzfWsbkrnBUfwqfzv1YNtLaHua5",
        "senderPublicKey": "3a5enbcYnahZCWBAvRPp7fmQoz7C6p4afNQgLAkZZqWx",
        "signature": "3dZpxCJYmmdQJqYmidQy7Jxzg8pgLpEF37wLT7TQEHhSi93gC84W2tUACrEqidhmEVbN3JiA2hVTuQB35s27cfMt",
        "timestamp": 2017-04-03T07:59:27.607Z,
        "type": 8,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "1",
        "fee": "0.001",
        "height": 435718,
        "id": "78Fj9MJgjhs2o1aeyN6WCSr3m9p8TyweHJj1rY7Zv4aE",
        "recipient": "3PEFQiFMLm1gTVjPdfCErG8mTHRcH2ATaWa",
        "sender": "3P3sr2Dy1KzVeBUeAcxK4CBGtg9S1B4pEwW",
        "senderPublicKey": "DNuVS9JDzasLfPc1NPYtaEP6A56qQM1xrNX88G1Hctmh",
        "signature": "44YFrTjH2asYFkThw1qvb3aYSSfqJMvyapgRTukPdtG1PyHGKWJHtwWWaZRjR9Xp4BMHwbLvSE7YNnWv9cVMAx51",
        "timestamp": 2017-04-03T10:06:21.611Z,
        "type": 8,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`leaseCancel transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "fee": "0.001",
    "height": 436147,
    "id": "4g5vqYxyczBhuyzKydHZiAG6mLcNCmXvvVyAVJwNUtqm",
    "leaseId": "9rK7fadKpDEkaBNmWyt2sCsEs29rFzW9zJMZEYnVqZm2",
    "sender": "3PQpqmG6UKJHRTtQ2s8Pz2Wasr9yGy8gowh",
    "senderPublicKey": "GkNdDyrkPhCGLq5KkC3aLTqymt4NNGoC77C3q4GVfZcQ",
    "signature": "5bMUfJc55wyDg18dAmehMFCYPMuNvhLGQK8vvm6AZygY6VN168zCSfS2zUovKLfEydE5gK3a4bMzk8dk2TTkrEW6",
    "timestamp": 2017-04-03T17:35:01.288Z,
    "type": 9,
    "version": 1,
  },
}
`;

exports[`leaseCancel transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "fee": "0.001",
        "height": 436147,
        "id": "4g5vqYxyczBhuyzKydHZiAG6mLcNCmXvvVyAVJwNUtqm",
        "leaseId": "9rK7fadKpDEkaBNmWyt2sCsEs29rFzW9zJMZEYnVqZm2",
        "sender": "3PQpqmG6UKJHRTtQ2s8Pz2Wasr9yGy8gowh",
        "senderPublicKey": "GkNdDyrkPhCGLq5KkC3aLTqymt4NNGoC77C3q4GVfZcQ",
        "signature": "5bMUfJc55wyDg18dAmehMFCYPMuNvhLGQK8vvm6AZygY6VN168zCSfS2zUovKLfEydE5gK3a4bMzk8dk2TTkrEW6",
        "timestamp": 2017-04-03T17:35:01.288Z,
        "type": 9,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "fee": "0.001",
        "height": 437710,
        "id": "FXfeJWZxoXeSBz5HRN2EYcjKxPXQUkjYDuDKEvQWvBFb",
        "leaseId": "3sKxz9MDEytue47Lumgeeh2Fefu87xbyBiuNCdfNbu8n",
        "sender": "3P4n3pykdAJH2rMeXsVbbNPnMdz73Svdrfo",
        "senderPublicKey": "GAeErK7x6yk6cy2Gv7PaCzzpoCwPx42DiBqTEiyrfhbc",
        "signature": "41TecrHPiLrLiBzKvupChBQ42qv6JYeHP6D4frJ7JZQzK2FFbRCcTQkw4j9HpNAEg8uTqdhRaaGkMVHc818sDoxz",
        "timestamp": 2017-04-04T19:25:27.782Z,
        "type": 9,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`massTransfer transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "assetId": "G9hT3ntXUenjCr2UwXRVa1PP6kWZtfotBLGYhfw8J7GG",
    "attachment": "",
    "fee": "0.051",
    "height": 940311,
    "id": "BDvR1eppSmJgxs2tof5Dfcw9Q6KPBmZYwyYriFNCoy5p",
    "proofs": Array [
      "2jmeTFfH3Rr3mD4fm1zsvWzu9QKrHXPZpVizdSbG1hrpaRKqs1dY4M4hcu7agVfJJCtsoMcw4k9NzpKyLX2S3fS1",
    ],
    "sender": "3PB4G5q152W27QmQLq1MfFU7Mt1TbzFyJ5X",
    "senderPublicKey": "AoRK8VRFzh5cMwyMy2DuPqChL5Y7C5g2guTgNK5fjX4Y",
    "timestamp": 2018-03-31T05:06:16.462Z,
    "transfers": Array [
      Object {
        "amount": "0.00001",
        "recipient": "3P2GT3dVCefShHZwDdciVeoZKhuZPfpe8m1",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PNpVXtoKq3uwvrQ4ghZKjcEYJEJ1zassvF",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P2VsC1BtcD9DrsPMfocNppqzLj1ZtQPR3A",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PKE68hcRWdmQMAP7uKdLnCjFPRJFxgv7tF",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P8Vcep11TW3CXsvbBav9nkU5kycVauQdsU",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PPLkrsPZc86nNA19f1rNzsGWamxwt4joxh",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLmNyPWLx8eBBKTwkNhhHy3ghmoDJC5zg6",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PCaz3ZebfgcByiasaDxGHBpBzUjtTSgTyX",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P3UmVtwGosA1Dw7TT4ZqyMQetcX6gPofy2",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PQQE2p4CeEkLB4nbDZnBX2VJVMwzXBuhvH",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PDxZXFZD4SGwt7e6FU3ZtT4QLDGkXfSdr8",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P55ZmPCZhy27rCQXzXSntXnLu8vE8pLdiB",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PBXkoVLjfw1vdfv6dd4KvHW87caXvZmXAx",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PQKZwg5tkigKfjhhZfcPZJ7fw1DExQQghr",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PMsxY1Gsbx2MmgYTPdN2pVN5kxWFfCZ9Gm",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P2FNnPKiyxzEawXf5T19yA2nszjeeHSG9F",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P7mdXUdoapk8BxbuafdRXUfECpCeywXptG",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P9bEVMrrvcmWLe2crwwXZv8fPZNetPtraB",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P6bmLCJeqDwiFQaGxhKNapSsLXmx7TZa8L",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P4xrSFfRekd7snJcdmdLsxb8x1FWDU3om6",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PFuNCrgpiNRx7gshiUVg5477RsiDgzDUhB",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P6rt4ckWnEWVnAnfhUchcqv4nzRjDW4Mwn",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PFYo2zhw7VKFoqdHcVNeKvX3ZWUpnPvqEz",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PC2Wsdra1S8jEGMwG1ktSub3L9rHgTJ5Rq",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PJSfM3dC8H2yeiYgKKYQLbah84PZbxkN6N",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PApMKsALhruACsWFHHrcRGLcyvPYLcN3E4",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PRDP5BewTL5VHWKhPFarJe6gug4vzeF2CU",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PP7TaBUPnuKix3M5zzRRkKoNSAnmUWrCxa",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PCUKwtkoQdz9fsUCenHQmNywzb1U5XXDk4",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PAKwLRu3jWpBYmLHnmgZezDXJn4UwdU7dn",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PEibC6jeZHhS8BFiFeAgJZ1dau8M8aftaV",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PGfK1nnHp7ARYCoJ8oYpdm9x1gUAMJaTdU",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P8cH2ULVQxXUQ7RFJNGYqEwdKGD6WfTkut",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PKbympyz4BWJZqggmEhvbMgpUGiAgfpSNw",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P2uYq6n1WguvyXpNc5p8PJ2A7F4tTiKzir",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P9Y9TrXpsYBGxG3z7n1zAhvdof3dNpu37M",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PMyXAhtbx3kLT5g6kyyv776YE3yC3Khjgm",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PBKb4ETEX3MKGz39eNUdoL5nEK2RBiEURT",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLayGTE4qVG1PkVWYz6acBxqXjaJnuBcot",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PHtb8RfHY1WCGk7TiU2S91NppdWeAEKwHS",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P4i2ipBtifbXQ5Uofhc2fHM4Az25LDV8Zi",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PFAiV2iUmCudDTeHtaot7vrsdSZG8k2CmG",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLBa629Gj1SgBrtGqzKruaZaPGuTvweXwc",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PDTxCeThBZ8z66tLs8pXxRtPNZoUYpnrSA",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P3teJvVMagZC7YeQbtEf21kJPRrtxuBsbK",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PFV7JX61U8bYYu8qE4RgT7VdvvYjrttCh6",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PCpFQwjhJtS6oip1ZNfs9tMGUeb7RETGKb",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PFt6Pd7qhjNsc6MwSNY6fHYgYHSQnDAtNW",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLBhn3iJwmCLMHfmueaRSJUhY2yXvfmZEw",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PAJjrbG5gHVKeW38U7biUZMPfmdj2J7tWb",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PCjcygmb394wFMaQydun6gvNCmMhiH5gsi",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P8sqUuNEGdHMNpjaMsTJniVke2d217fDx2",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PMqzPmPv42PmqsgCgVkUUjWqMpdHxmCmEM",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P28n8DdCjFgGernhLptM9rxvQgyEU7xMPR",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PD3tA89cx24BpENEmkHBZbbq7eKrimw8n5",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PMpsekKQwy2DqthhujjrAspV6GsH9jVZrG",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLZZynsxaEJKGHBeU5PuqfXzeGUQ13MkNe",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLYsRf2DrpwYUXtGKM4zCEMo6RUM9pyDv2",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P9oe4EFakiNT1n5bNSoF6FxwCyCTCgLL3S",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PKojMznFBSgdG1GaL4PreYWcxktnbNkwfR",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PHaomhhQ3huNQZjmVAVnU6TxjwWJ1HcghF",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLSGZJtMMKEDuQJdcHfgcE8mybMBZ1CMLV",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PESHgqCN2FBj8ewvFgN8V2Dg6ouHiT5d2f",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P8KmRb3zg1RA2UUogM4btEzRVZJ6RUjWpp",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PQPAVHFqaEqnHhKFsQYwVAH4MCTHNoh6AT",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLVKEb1nLKCx4cAXkj6QHtoxhr7rg1odYW",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PGmEk26nPaBVnDm41nfuJDV2zW5tBVz4gQ",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PG7h5t7xQnJVkSkpCJ9nubiPdmzAQkCqrH",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PGjK2uDVZf87aPiwAuDM6aBL2ytse1egg2",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PPZrhrDpiFDvHkyoNADrd5cSnSLNno1Afw",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P37V6rzQZD7mYQMXK2xdS8Kup2BCyLj3Gv",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P4ZKjjte51FPQKwHtmELVUeKuC4gwMmYAn",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PE5Kf6ZRcqm29vAF87LtRVVCNtNaHCcrxw",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P5RNsrnv1dJjBrMLjDie5enbu2Nt6eHv2e",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PCWcjzWe5CaGTpcY53XyfCxP5UteKsvgmu",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P2CfEe7PV9KnrjbUvgaHhBTFAHPNsczohN",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PG5zoEGkUFDasp37ceMadCpbfwdXiJ47Tz",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P8JUR4b1qZsX7Zc49r7tH2SwJuZvv1qnxa",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PQ1HTTyJii2kn4xBfYdgcrKhjkTqSL86Gd",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PEufqvBAsA65F2htmQJ7aWsyyVifTAHKBz",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PJkYi1TjwCyn1HAeUCuC9pEVLbTtghGcBf",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PJufHtTzN3JNB7HWej2FGxq6mEcFUZmHG3",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PMFCXwrbZPcu1QsDwvb7nogfuskSTJ6dvq",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PG2b353th3KrQsEHq3jJKcFbB5pD2WaJ9e",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PNNHmDbqPj5U9vAWwxtCmyBRJB6Myt8amD",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PEU58EnfbhTCfsq3Fq3YyG7RXRKKkasbej",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P2QfyBokyL1ZAka1bUYLKbpw7MQmm92f9h",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P3mMHAeRffvEDw3MZTdiMEi9op44VL3Y7N",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P44H9h9q67uvP7ARc6ukhUjboGF4b5v3qu",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P2KYxKR4chSa6pkqu1TExNsFasQaFRKwFP",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P7c5BeYEgNiZN68kQHdPL9tqyAkmWettG9",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PDAdRtpuDUWyYxgRPj3EKGe1Th3mJDNMVf",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P9akFerhYtWfJVaAn3utKasWMiEZSxo2wP",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PJ5Gp6KanRVJPK31pTuespqotSQusYAhhE",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PL4FTyqP3DSgjjaRDHmc5DzdhLQgRQ8fy9",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PNYxhtYefXrQNuoLFsRqhqLtbMVdgz3Sjm",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PCJSv2GXC7e5N3epLMQfHDi4SBjkYh9qSp",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PLam7u75fT45NpcUxPsVepsffaQVS4uC3o",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3P3bX9GF8G1vPW79mBRdSwPiEhtHnJmdZLU",
      },
      Object {
        "amount": "0.00001",
        "recipient": "3PFDRGPfMsXtnjYq9H6Sf8rCSXvjGi9emN6",
      },
    ],
    "type": 11,
    "version": 1,
  },
}
`;

exports[`massTransfer transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "G9hT3ntXUenjCr2UwXRVa1PP6kWZtfotBLGYhfw8J7GG",
        "attachment": "",
        "fee": "0.051",
        "height": 940311,
        "id": "BDvR1eppSmJgxs2tof5Dfcw9Q6KPBmZYwyYriFNCoy5p",
        "proofs": Array [
          "2jmeTFfH3Rr3mD4fm1zsvWzu9QKrHXPZpVizdSbG1hrpaRKqs1dY4M4hcu7agVfJJCtsoMcw4k9NzpKyLX2S3fS1",
        ],
        "sender": "3PB4G5q152W27QmQLq1MfFU7Mt1TbzFyJ5X",
        "senderPublicKey": "AoRK8VRFzh5cMwyMy2DuPqChL5Y7C5g2guTgNK5fjX4Y",
        "timestamp": 2018-03-31T05:06:16.462Z,
        "transfers": Array [
          Object {
            "amount": "0.00001",
            "recipient": "3P2GT3dVCefShHZwDdciVeoZKhuZPfpe8m1",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PNpVXtoKq3uwvrQ4ghZKjcEYJEJ1zassvF",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P2VsC1BtcD9DrsPMfocNppqzLj1ZtQPR3A",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PKE68hcRWdmQMAP7uKdLnCjFPRJFxgv7tF",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P8Vcep11TW3CXsvbBav9nkU5kycVauQdsU",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PPLkrsPZc86nNA19f1rNzsGWamxwt4joxh",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLmNyPWLx8eBBKTwkNhhHy3ghmoDJC5zg6",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PCaz3ZebfgcByiasaDxGHBpBzUjtTSgTyX",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P3UmVtwGosA1Dw7TT4ZqyMQetcX6gPofy2",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PQQE2p4CeEkLB4nbDZnBX2VJVMwzXBuhvH",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PDxZXFZD4SGwt7e6FU3ZtT4QLDGkXfSdr8",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P55ZmPCZhy27rCQXzXSntXnLu8vE8pLdiB",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PBXkoVLjfw1vdfv6dd4KvHW87caXvZmXAx",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PQKZwg5tkigKfjhhZfcPZJ7fw1DExQQghr",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PMsxY1Gsbx2MmgYTPdN2pVN5kxWFfCZ9Gm",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P2FNnPKiyxzEawXf5T19yA2nszjeeHSG9F",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P7mdXUdoapk8BxbuafdRXUfECpCeywXptG",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P9bEVMrrvcmWLe2crwwXZv8fPZNetPtraB",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P6bmLCJeqDwiFQaGxhKNapSsLXmx7TZa8L",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P4xrSFfRekd7snJcdmdLsxb8x1FWDU3om6",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PFuNCrgpiNRx7gshiUVg5477RsiDgzDUhB",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P6rt4ckWnEWVnAnfhUchcqv4nzRjDW4Mwn",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PFYo2zhw7VKFoqdHcVNeKvX3ZWUpnPvqEz",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PC2Wsdra1S8jEGMwG1ktSub3L9rHgTJ5Rq",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PJSfM3dC8H2yeiYgKKYQLbah84PZbxkN6N",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PApMKsALhruACsWFHHrcRGLcyvPYLcN3E4",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PRDP5BewTL5VHWKhPFarJe6gug4vzeF2CU",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PP7TaBUPnuKix3M5zzRRkKoNSAnmUWrCxa",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PCUKwtkoQdz9fsUCenHQmNywzb1U5XXDk4",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PAKwLRu3jWpBYmLHnmgZezDXJn4UwdU7dn",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PEibC6jeZHhS8BFiFeAgJZ1dau8M8aftaV",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PGfK1nnHp7ARYCoJ8oYpdm9x1gUAMJaTdU",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P8cH2ULVQxXUQ7RFJNGYqEwdKGD6WfTkut",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PKbympyz4BWJZqggmEhvbMgpUGiAgfpSNw",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P2uYq6n1WguvyXpNc5p8PJ2A7F4tTiKzir",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P9Y9TrXpsYBGxG3z7n1zAhvdof3dNpu37M",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PMyXAhtbx3kLT5g6kyyv776YE3yC3Khjgm",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PBKb4ETEX3MKGz39eNUdoL5nEK2RBiEURT",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLayGTE4qVG1PkVWYz6acBxqXjaJnuBcot",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PHtb8RfHY1WCGk7TiU2S91NppdWeAEKwHS",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P4i2ipBtifbXQ5Uofhc2fHM4Az25LDV8Zi",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PFAiV2iUmCudDTeHtaot7vrsdSZG8k2CmG",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLBa629Gj1SgBrtGqzKruaZaPGuTvweXwc",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PDTxCeThBZ8z66tLs8pXxRtPNZoUYpnrSA",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P3teJvVMagZC7YeQbtEf21kJPRrtxuBsbK",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PFV7JX61U8bYYu8qE4RgT7VdvvYjrttCh6",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PCpFQwjhJtS6oip1ZNfs9tMGUeb7RETGKb",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PFt6Pd7qhjNsc6MwSNY6fHYgYHSQnDAtNW",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLBhn3iJwmCLMHfmueaRSJUhY2yXvfmZEw",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PAJjrbG5gHVKeW38U7biUZMPfmdj2J7tWb",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PCjcygmb394wFMaQydun6gvNCmMhiH5gsi",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P8sqUuNEGdHMNpjaMsTJniVke2d217fDx2",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PMqzPmPv42PmqsgCgVkUUjWqMpdHxmCmEM",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P28n8DdCjFgGernhLptM9rxvQgyEU7xMPR",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PD3tA89cx24BpENEmkHBZbbq7eKrimw8n5",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PMpsekKQwy2DqthhujjrAspV6GsH9jVZrG",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLZZynsxaEJKGHBeU5PuqfXzeGUQ13MkNe",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLYsRf2DrpwYUXtGKM4zCEMo6RUM9pyDv2",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P9oe4EFakiNT1n5bNSoF6FxwCyCTCgLL3S",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PKojMznFBSgdG1GaL4PreYWcxktnbNkwfR",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PHaomhhQ3huNQZjmVAVnU6TxjwWJ1HcghF",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLSGZJtMMKEDuQJdcHfgcE8mybMBZ1CMLV",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PESHgqCN2FBj8ewvFgN8V2Dg6ouHiT5d2f",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P8KmRb3zg1RA2UUogM4btEzRVZJ6RUjWpp",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PQPAVHFqaEqnHhKFsQYwVAH4MCTHNoh6AT",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLVKEb1nLKCx4cAXkj6QHtoxhr7rg1odYW",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PGmEk26nPaBVnDm41nfuJDV2zW5tBVz4gQ",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PG7h5t7xQnJVkSkpCJ9nubiPdmzAQkCqrH",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PGjK2uDVZf87aPiwAuDM6aBL2ytse1egg2",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PPZrhrDpiFDvHkyoNADrd5cSnSLNno1Afw",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P37V6rzQZD7mYQMXK2xdS8Kup2BCyLj3Gv",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P4ZKjjte51FPQKwHtmELVUeKuC4gwMmYAn",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PE5Kf6ZRcqm29vAF87LtRVVCNtNaHCcrxw",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P5RNsrnv1dJjBrMLjDie5enbu2Nt6eHv2e",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PCWcjzWe5CaGTpcY53XyfCxP5UteKsvgmu",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P2CfEe7PV9KnrjbUvgaHhBTFAHPNsczohN",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PG5zoEGkUFDasp37ceMadCpbfwdXiJ47Tz",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P8JUR4b1qZsX7Zc49r7tH2SwJuZvv1qnxa",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PQ1HTTyJii2kn4xBfYdgcrKhjkTqSL86Gd",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PEufqvBAsA65F2htmQJ7aWsyyVifTAHKBz",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PJkYi1TjwCyn1HAeUCuC9pEVLbTtghGcBf",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PJufHtTzN3JNB7HWej2FGxq6mEcFUZmHG3",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PMFCXwrbZPcu1QsDwvb7nogfuskSTJ6dvq",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PG2b353th3KrQsEHq3jJKcFbB5pD2WaJ9e",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PNNHmDbqPj5U9vAWwxtCmyBRJB6Myt8amD",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PEU58EnfbhTCfsq3Fq3YyG7RXRKKkasbej",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P2QfyBokyL1ZAka1bUYLKbpw7MQmm92f9h",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P3mMHAeRffvEDw3MZTdiMEi9op44VL3Y7N",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P44H9h9q67uvP7ARc6ukhUjboGF4b5v3qu",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P2KYxKR4chSa6pkqu1TExNsFasQaFRKwFP",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P7c5BeYEgNiZN68kQHdPL9tqyAkmWettG9",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PDAdRtpuDUWyYxgRPj3EKGe1Th3mJDNMVf",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P9akFerhYtWfJVaAn3utKasWMiEZSxo2wP",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PJ5Gp6KanRVJPK31pTuespqotSQusYAhhE",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PL4FTyqP3DSgjjaRDHmc5DzdhLQgRQ8fy9",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PNYxhtYefXrQNuoLFsRqhqLtbMVdgz3Sjm",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PCJSv2GXC7e5N3epLMQfHDi4SBjkYh9qSp",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PLam7u75fT45NpcUxPsVepsffaQVS4uC3o",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3P3bX9GF8G1vPW79mBRdSwPiEhtHnJmdZLU",
          },
          Object {
            "amount": "0.00001",
            "recipient": "3PFDRGPfMsXtnjYq9H6Sf8rCSXvjGi9emN6",
          },
        ],
        "type": 11,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "G9hT3ntXUenjCr2UwXRVa1PP6kWZtfotBLGYhfw8J7GG",
        "attachment": "",
        "fee": "0.051",
        "height": 940541,
        "id": "BooPcaewXeC1yfBKy89d8Sjk3L7Yii6WFr4kArqe32Ky",
        "proofs": Array [
          "3rABK1xMrTP4Zj6p1inT8NjMHJiYqGHwHi8KxjF2jFUtKaEEQtyfk6t4uCGtJxYcHmmroQPRUSSiP21GCFtHF8Zw",
        ],
        "sender": "3PB4G5q152W27QmQLq1MfFU7Mt1TbzFyJ5X",
        "senderPublicKey": "AoRK8VRFzh5cMwyMy2DuPqChL5Y7C5g2guTgNK5fjX4Y",
        "timestamp": 2018-03-31T09:22:56.134Z,
        "transfers": Array [
          Object {
            "amount": "1000",
            "recipient": "3P2GT3dVCefShHZwDdciVeoZKhuZPfpe8m1",
          },
          Object {
            "amount": "1000",
            "recipient": "3PNpVXtoKq3uwvrQ4ghZKjcEYJEJ1zassvF",
          },
          Object {
            "amount": "1000",
            "recipient": "3P2VsC1BtcD9DrsPMfocNppqzLj1ZtQPR3A",
          },
          Object {
            "amount": "1000",
            "recipient": "3PKE68hcRWdmQMAP7uKdLnCjFPRJFxgv7tF",
          },
          Object {
            "amount": "1000",
            "recipient": "3P8Vcep11TW3CXsvbBav9nkU5kycVauQdsU",
          },
          Object {
            "amount": "1000",
            "recipient": "3PPLkrsPZc86nNA19f1rNzsGWamxwt4joxh",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLmNyPWLx8eBBKTwkNhhHy3ghmoDJC5zg6",
          },
          Object {
            "amount": "1000",
            "recipient": "3PCaz3ZebfgcByiasaDxGHBpBzUjtTSgTyX",
          },
          Object {
            "amount": "1000",
            "recipient": "3P3UmVtwGosA1Dw7TT4ZqyMQetcX6gPofy2",
          },
          Object {
            "amount": "1000",
            "recipient": "3PQQE2p4CeEkLB4nbDZnBX2VJVMwzXBuhvH",
          },
          Object {
            "amount": "1000",
            "recipient": "3PDxZXFZD4SGwt7e6FU3ZtT4QLDGkXfSdr8",
          },
          Object {
            "amount": "1000",
            "recipient": "3P55ZmPCZhy27rCQXzXSntXnLu8vE8pLdiB",
          },
          Object {
            "amount": "1000",
            "recipient": "3PBXkoVLjfw1vdfv6dd4KvHW87caXvZmXAx",
          },
          Object {
            "amount": "1000",
            "recipient": "3PQKZwg5tkigKfjhhZfcPZJ7fw1DExQQghr",
          },
          Object {
            "amount": "1000",
            "recipient": "3PMsxY1Gsbx2MmgYTPdN2pVN5kxWFfCZ9Gm",
          },
          Object {
            "amount": "1000",
            "recipient": "3P2FNnPKiyxzEawXf5T19yA2nszjeeHSG9F",
          },
          Object {
            "amount": "1000",
            "recipient": "3P7mdXUdoapk8BxbuafdRXUfECpCeywXptG",
          },
          Object {
            "amount": "1000",
            "recipient": "3P9bEVMrrvcmWLe2crwwXZv8fPZNetPtraB",
          },
          Object {
            "amount": "1000",
            "recipient": "3P6bmLCJeqDwiFQaGxhKNapSsLXmx7TZa8L",
          },
          Object {
            "amount": "1000",
            "recipient": "3P4xrSFfRekd7snJcdmdLsxb8x1FWDU3om6",
          },
          Object {
            "amount": "1000",
            "recipient": "3PFuNCrgpiNRx7gshiUVg5477RsiDgzDUhB",
          },
          Object {
            "amount": "1000",
            "recipient": "3P6rt4ckWnEWVnAnfhUchcqv4nzRjDW4Mwn",
          },
          Object {
            "amount": "1000",
            "recipient": "3PFYo2zhw7VKFoqdHcVNeKvX3ZWUpnPvqEz",
          },
          Object {
            "amount": "1000",
            "recipient": "3PC2Wsdra1S8jEGMwG1ktSub3L9rHgTJ5Rq",
          },
          Object {
            "amount": "1000",
            "recipient": "3PJSfM3dC8H2yeiYgKKYQLbah84PZbxkN6N",
          },
          Object {
            "amount": "1000",
            "recipient": "3PApMKsALhruACsWFHHrcRGLcyvPYLcN3E4",
          },
          Object {
            "amount": "1000",
            "recipient": "3PRDP5BewTL5VHWKhPFarJe6gug4vzeF2CU",
          },
          Object {
            "amount": "1000",
            "recipient": "3PP7TaBUPnuKix3M5zzRRkKoNSAnmUWrCxa",
          },
          Object {
            "amount": "1000",
            "recipient": "3PCUKwtkoQdz9fsUCenHQmNywzb1U5XXDk4",
          },
          Object {
            "amount": "1000",
            "recipient": "3PAKwLRu3jWpBYmLHnmgZezDXJn4UwdU7dn",
          },
          Object {
            "amount": "1000",
            "recipient": "3PEibC6jeZHhS8BFiFeAgJZ1dau8M8aftaV",
          },
          Object {
            "amount": "1000",
            "recipient": "3PGfK1nnHp7ARYCoJ8oYpdm9x1gUAMJaTdU",
          },
          Object {
            "amount": "1000",
            "recipient": "3P8cH2ULVQxXUQ7RFJNGYqEwdKGD6WfTkut",
          },
          Object {
            "amount": "1000",
            "recipient": "3PKbympyz4BWJZqggmEhvbMgpUGiAgfpSNw",
          },
          Object {
            "amount": "1000",
            "recipient": "3P2uYq6n1WguvyXpNc5p8PJ2A7F4tTiKzir",
          },
          Object {
            "amount": "1000",
            "recipient": "3P9Y9TrXpsYBGxG3z7n1zAhvdof3dNpu37M",
          },
          Object {
            "amount": "1000",
            "recipient": "3PMyXAhtbx3kLT5g6kyyv776YE3yC3Khjgm",
          },
          Object {
            "amount": "1000",
            "recipient": "3PBKb4ETEX3MKGz39eNUdoL5nEK2RBiEURT",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLayGTE4qVG1PkVWYz6acBxqXjaJnuBcot",
          },
          Object {
            "amount": "1000",
            "recipient": "3PHtb8RfHY1WCGk7TiU2S91NppdWeAEKwHS",
          },
          Object {
            "amount": "1000",
            "recipient": "3P4i2ipBtifbXQ5Uofhc2fHM4Az25LDV8Zi",
          },
          Object {
            "amount": "1000",
            "recipient": "3PFAiV2iUmCudDTeHtaot7vrsdSZG8k2CmG",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLBa629Gj1SgBrtGqzKruaZaPGuTvweXwc",
          },
          Object {
            "amount": "1000",
            "recipient": "3PDTxCeThBZ8z66tLs8pXxRtPNZoUYpnrSA",
          },
          Object {
            "amount": "1000",
            "recipient": "3P3teJvVMagZC7YeQbtEf21kJPRrtxuBsbK",
          },
          Object {
            "amount": "1000",
            "recipient": "3PFV7JX61U8bYYu8qE4RgT7VdvvYjrttCh6",
          },
          Object {
            "amount": "1000",
            "recipient": "3PCpFQwjhJtS6oip1ZNfs9tMGUeb7RETGKb",
          },
          Object {
            "amount": "1000",
            "recipient": "3PFt6Pd7qhjNsc6MwSNY6fHYgYHSQnDAtNW",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLBhn3iJwmCLMHfmueaRSJUhY2yXvfmZEw",
          },
          Object {
            "amount": "1000",
            "recipient": "3PAJjrbG5gHVKeW38U7biUZMPfmdj2J7tWb",
          },
          Object {
            "amount": "1000",
            "recipient": "3PCjcygmb394wFMaQydun6gvNCmMhiH5gsi",
          },
          Object {
            "amount": "1000",
            "recipient": "3P8sqUuNEGdHMNpjaMsTJniVke2d217fDx2",
          },
          Object {
            "amount": "1000",
            "recipient": "3PMqzPmPv42PmqsgCgVkUUjWqMpdHxmCmEM",
          },
          Object {
            "amount": "1000",
            "recipient": "3P28n8DdCjFgGernhLptM9rxvQgyEU7xMPR",
          },
          Object {
            "amount": "1000",
            "recipient": "3PD3tA89cx24BpENEmkHBZbbq7eKrimw8n5",
          },
          Object {
            "amount": "1000",
            "recipient": "3PMpsekKQwy2DqthhujjrAspV6GsH9jVZrG",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLZZynsxaEJKGHBeU5PuqfXzeGUQ13MkNe",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLYsRf2DrpwYUXtGKM4zCEMo6RUM9pyDv2",
          },
          Object {
            "amount": "1000",
            "recipient": "3P9oe4EFakiNT1n5bNSoF6FxwCyCTCgLL3S",
          },
          Object {
            "amount": "1000",
            "recipient": "3PKojMznFBSgdG1GaL4PreYWcxktnbNkwfR",
          },
          Object {
            "amount": "1000",
            "recipient": "3PHaomhhQ3huNQZjmVAVnU6TxjwWJ1HcghF",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLSGZJtMMKEDuQJdcHfgcE8mybMBZ1CMLV",
          },
          Object {
            "amount": "1000",
            "recipient": "3PESHgqCN2FBj8ewvFgN8V2Dg6ouHiT5d2f",
          },
          Object {
            "amount": "1000",
            "recipient": "3P8KmRb3zg1RA2UUogM4btEzRVZJ6RUjWpp",
          },
          Object {
            "amount": "1000",
            "recipient": "3PQPAVHFqaEqnHhKFsQYwVAH4MCTHNoh6AT",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLVKEb1nLKCx4cAXkj6QHtoxhr7rg1odYW",
          },
          Object {
            "amount": "1000",
            "recipient": "3PGmEk26nPaBVnDm41nfuJDV2zW5tBVz4gQ",
          },
          Object {
            "amount": "1000",
            "recipient": "3PG7h5t7xQnJVkSkpCJ9nubiPdmzAQkCqrH",
          },
          Object {
            "amount": "1000",
            "recipient": "3PGjK2uDVZf87aPiwAuDM6aBL2ytse1egg2",
          },
          Object {
            "amount": "1000",
            "recipient": "3PPZrhrDpiFDvHkyoNADrd5cSnSLNno1Afw",
          },
          Object {
            "amount": "1000",
            "recipient": "3P37V6rzQZD7mYQMXK2xdS8Kup2BCyLj3Gv",
          },
          Object {
            "amount": "1000",
            "recipient": "3P4ZKjjte51FPQKwHtmELVUeKuC4gwMmYAn",
          },
          Object {
            "amount": "1000",
            "recipient": "3PE5Kf6ZRcqm29vAF87LtRVVCNtNaHCcrxw",
          },
          Object {
            "amount": "1000",
            "recipient": "3P5RNsrnv1dJjBrMLjDie5enbu2Nt6eHv2e",
          },
          Object {
            "amount": "1000",
            "recipient": "3PCWcjzWe5CaGTpcY53XyfCxP5UteKsvgmu",
          },
          Object {
            "amount": "1000",
            "recipient": "3P2CfEe7PV9KnrjbUvgaHhBTFAHPNsczohN",
          },
          Object {
            "amount": "1000",
            "recipient": "3PG5zoEGkUFDasp37ceMadCpbfwdXiJ47Tz",
          },
          Object {
            "amount": "1000",
            "recipient": "3P8JUR4b1qZsX7Zc49r7tH2SwJuZvv1qnxa",
          },
          Object {
            "amount": "1000",
            "recipient": "3PQ1HTTyJii2kn4xBfYdgcrKhjkTqSL86Gd",
          },
          Object {
            "amount": "1000",
            "recipient": "3PEufqvBAsA65F2htmQJ7aWsyyVifTAHKBz",
          },
          Object {
            "amount": "1000",
            "recipient": "3PJkYi1TjwCyn1HAeUCuC9pEVLbTtghGcBf",
          },
          Object {
            "amount": "1000",
            "recipient": "3PJufHtTzN3JNB7HWej2FGxq6mEcFUZmHG3",
          },
          Object {
            "amount": "1000",
            "recipient": "3PMFCXwrbZPcu1QsDwvb7nogfuskSTJ6dvq",
          },
          Object {
            "amount": "1000",
            "recipient": "3PG2b353th3KrQsEHq3jJKcFbB5pD2WaJ9e",
          },
          Object {
            "amount": "1000",
            "recipient": "3PNNHmDbqPj5U9vAWwxtCmyBRJB6Myt8amD",
          },
          Object {
            "amount": "1000",
            "recipient": "3PEU58EnfbhTCfsq3Fq3YyG7RXRKKkasbej",
          },
          Object {
            "amount": "1000",
            "recipient": "3P2QfyBokyL1ZAka1bUYLKbpw7MQmm92f9h",
          },
          Object {
            "amount": "1000",
            "recipient": "3P3mMHAeRffvEDw3MZTdiMEi9op44VL3Y7N",
          },
          Object {
            "amount": "1000",
            "recipient": "3P44H9h9q67uvP7ARc6ukhUjboGF4b5v3qu",
          },
          Object {
            "amount": "1000",
            "recipient": "3P2KYxKR4chSa6pkqu1TExNsFasQaFRKwFP",
          },
          Object {
            "amount": "1000",
            "recipient": "3P7c5BeYEgNiZN68kQHdPL9tqyAkmWettG9",
          },
          Object {
            "amount": "1000",
            "recipient": "3PDAdRtpuDUWyYxgRPj3EKGe1Th3mJDNMVf",
          },
          Object {
            "amount": "1000",
            "recipient": "3P9akFerhYtWfJVaAn3utKasWMiEZSxo2wP",
          },
          Object {
            "amount": "1000",
            "recipient": "3PJ5Gp6KanRVJPK31pTuespqotSQusYAhhE",
          },
          Object {
            "amount": "1000",
            "recipient": "3PL4FTyqP3DSgjjaRDHmc5DzdhLQgRQ8fy9",
          },
          Object {
            "amount": "1000",
            "recipient": "3PNYxhtYefXrQNuoLFsRqhqLtbMVdgz3Sjm",
          },
          Object {
            "amount": "1000",
            "recipient": "3PCJSv2GXC7e5N3epLMQfHDi4SBjkYh9qSp",
          },
          Object {
            "amount": "1000",
            "recipient": "3PLam7u75fT45NpcUxPsVepsffaQVS4uC3o",
          },
          Object {
            "amount": "1000",
            "recipient": "3P3bX9GF8G1vPW79mBRdSwPiEhtHnJmdZLU",
          },
          Object {
            "amount": "1000",
            "recipient": "3PFDRGPfMsXtnjYq9H6Sf8rCSXvjGi9emN6",
          },
        ],
        "type": 11,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`payment transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "5",
    "fee": "0.001",
    "height": 251375,
    "id": "5jpwaJnERa8Gr1ChgrNYnmxm2EtZ4KHC5bW1ZLL7LCY1bUV9gFWFAGjpJaPDCawmFzguqGBgYDyeocpEsKWeYDM1",
    "recipient": "3PR3xnzz1oD58K73T1dkLuVMJG8UxDZZJzV",
    "sender": "3P89Gonteikxhpup4ExAf5SaQyHVzeQqvNg",
    "senderPublicKey": "4uQeVj5tqViQh7yWWGStvkEG1Zmhx6uasJtWCJziofM",
    "signature": "5jpwaJnERa8Gr1ChgrNYnmxm2EtZ4KHC5bW1ZLL7LCY1bUV9gFWFAGjpJaPDCawmFzguqGBgYDyeocpEsKWeYDM1",
    "timestamp": 2016-11-28T09:51:07.653Z,
    "type": 2,
  },
}
`;

exports[`payment transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "5",
        "fee": "0.001",
        "height": 251375,
        "id": "5jpwaJnERa8Gr1ChgrNYnmxm2EtZ4KHC5bW1ZLL7LCY1bUV9gFWFAGjpJaPDCawmFzguqGBgYDyeocpEsKWeYDM1",
        "recipient": "3PR3xnzz1oD58K73T1dkLuVMJG8UxDZZJzV",
        "sender": "3P89Gonteikxhpup4ExAf5SaQyHVzeQqvNg",
        "senderPublicKey": "4uQeVj5tqViQh7yWWGStvkEG1Zmhx6uasJtWCJziofM",
        "signature": "5jpwaJnERa8Gr1ChgrNYnmxm2EtZ4KHC5bW1ZLL7LCY1bUV9gFWFAGjpJaPDCawmFzguqGBgYDyeocpEsKWeYDM1",
        "timestamp": 2016-11-28T09:51:07.653Z,
        "type": 2,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "0.00001",
        "fee": "1e-8",
        "height": 21874,
        "id": "119tSRyy2sAFcAS5Htb6m4FtsCtJsacAwarg75WpsAf9HgMJnpvgcLou31ARxxEp1WMuTmGTRNUeghCgrS4PxDT",
        "recipient": "3PBrHA9R2Rf6xg4keyymMvrvNQmc6oQhxgD",
        "sender": "3PNqJ6aaGAL15fmPHhWvk3V6yqL6RpptMZp",
        "senderPublicKey": "HCt7iRNfcWSv4A6yPgcLaBQ6URWAa8ZdPQC9FUkbbJSW",
        "signature": "119tSRyy2sAFcAS5Htb6m4FtsCtJsacAwarg75WpsAf9HgMJnpvgcLou31ARxxEp1WMuTmGTRNUeghCgrS4PxDT",
        "timestamp": 2016-06-27T10:07:19.161Z,
        "type": 2,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`reissue transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "assetId": "F7CrEp9tihJSxTAAv2Kai1QQWBdF2fp3tyiDMRuvtcQm",
    "fee": "1",
    "height": 263697,
    "id": "2JksHUA6E4ZQd351i3oxJq2Ts7tvMN7NNVfoduR1fFsk",
    "quantity": "500",
    "reissuable": false,
    "sender": "3P7HKYe6HB8eK7uXxrztEYUSzZQyyYRnWHg",
    "senderPublicKey": "9ASL55YRs78rW5hjRAgjyWww7QqP99HwuB8dG6AqtnFm",
    "signature": "3FsqtYU1gt51F4YyEpG43e9XntY3qkxUdUZzxMzvb28MpaxytE7pw22gafwe11Za3uLvDvWUcxnoHj1dqCtRwfhE",
    "timestamp": 2016-12-06T16:41:30.430Z,
    "type": 5,
    "version": 1,
  },
}
`;

exports[`reissue transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "F7CrEp9tihJSxTAAv2Kai1QQWBdF2fp3tyiDMRuvtcQm",
        "fee": "1",
        "height": 263697,
        "id": "2JksHUA6E4ZQd351i3oxJq2Ts7tvMN7NNVfoduR1fFsk",
        "quantity": "500",
        "reissuable": false,
        "sender": "3P7HKYe6HB8eK7uXxrztEYUSzZQyyYRnWHg",
        "senderPublicKey": "9ASL55YRs78rW5hjRAgjyWww7QqP99HwuB8dG6AqtnFm",
        "signature": "3FsqtYU1gt51F4YyEpG43e9XntY3qkxUdUZzxMzvb28MpaxytE7pw22gafwe11Za3uLvDvWUcxnoHj1dqCtRwfhE",
        "timestamp": 2016-12-06T16:41:30.430Z,
        "type": 5,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "FrEWpLGMKuB2wuVHPm4g1GEaPhuTaM3WBpiBr3N5ns44",
        "fee": "1",
        "height": 264684,
        "id": "2TyaLLCzjvC3tVTWebq5hAvEakXeACRrf3Bgu4e8fSos",
        "quantity": "1",
        "reissuable": false,
        "sender": "3PCgo6hYPPs9eWY3MBABEaR74KDHk7GfLxo",
        "senderPublicKey": "8kZrVHQBWmBqKKsu1jfgXoVhyL5b8REFTpMsmwnDLM1X",
        "signature": "2NY9uQ9sCJ3fLcsB26hB85KW9swXytnvejx1gfXRfCyXCurJ6mtzMVx63RGZ5GTwK6jUHZLxXeXFioVfQKuDEGAN",
        "timestamp": 2016-12-07T08:21:00.941Z,
        "type": 5,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`setScript transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "fee": "0.02082496",
    "height": 1190001,
    "id": "8Nwjd2tcQWff3S9WAhBa7vLRNpNnigWqrTbahvyfMVrU",
    "proofs": Array [
      "V45jPG1nuEnwaYb9jTKQCJpRskJQvtkBcnZ45WjZUbVdNTi1KijVikJkDfMNcEdSBF8oGDYZiWpVTdLSn76mV57",
    ],
    "script": "base64:AQQAAAAEaW5hbAIAAAAESW5hbAQAAAAFZWxlbmECAAAAB0xlbnVza2EEAAAABGxvdmUCAAAAC0luYWxMZW51c2thCQAAAAAAAAIJAAEsAAAAAgUAAAAEaW5hbAUAAAAFZWxlbmEFAAAABGxvdmV4ZFt5",
    "sender": "3PBSduYkK7GQxVFWkKWMq8GQkVdAGX71hTx",
    "senderPublicKey": "3LZmDK7vuSBsDmFLxJ4qihZynUz8JF9e88dNu5fsus5p",
    "timestamp": 2018-09-26T11:51:52.182Z,
    "type": 13,
    "version": 1,
  },
}
`;

exports[`setScript transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "fee": "0.02082496",
        "height": 1190001,
        "id": "8Nwjd2tcQWff3S9WAhBa7vLRNpNnigWqrTbahvyfMVrU",
        "proofs": Array [
          "V45jPG1nuEnwaYb9jTKQCJpRskJQvtkBcnZ45WjZUbVdNTi1KijVikJkDfMNcEdSBF8oGDYZiWpVTdLSn76mV57",
        ],
        "script": "base64:AQQAAAAEaW5hbAIAAAAESW5hbAQAAAAFZWxlbmECAAAAB0xlbnVza2EEAAAABGxvdmUCAAAAC0luYWxMZW51c2thCQAAAAAAAAIJAAEsAAAAAgUAAAAEaW5hbAUAAAAFZWxlbmEFAAAABGxvdmV4ZFt5",
        "sender": "3PBSduYkK7GQxVFWkKWMq8GQkVdAGX71hTx",
        "senderPublicKey": "3LZmDK7vuSBsDmFLxJ4qihZynUz8JF9e88dNu5fsus5p",
        "timestamp": 2018-09-26T11:51:52.182Z,
        "type": 13,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "fee": "0.01",
        "height": 1190002,
        "id": "Dt7L51pQbmMcc971byGeBHDgoi7AMfHgCtmoWYMRyWhL",
        "proofs": Array [
          "3wPYieN6CriPVzRDCGCqDnPLR5xDDC1RaQVPT85RiftARZobeAEQ1bMp4rwMSHhSPgKyAGDAfFDGkjvBvKVuqqJg",
        ],
        "script": "base64:AQkAAfQAAAADCAUAAAACdHgAAAAJYm9keUJ5dGVzCQABkQAAAAIIBQAAAAJ0eAAAAAZwcm9vZnMAAAAAAAAAAAABAAAAIJCWiNsyagiZio80TlMvhx+LNSWy+s3wvE/jALCRCi1e2ccqiA==",
        "sender": "3P6WfA4qYtkgwVAsWiiB6yaea2X8zyXncJh",
        "senderPublicKey": "EYNuSmW4Adtcc6AMCZyxkiHMPmF2BZ2XxvjpBip3UFZL",
        "timestamp": 2018-09-26T12:55:09.003Z,
        "type": 13,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`sponsorship transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "assetId": "J8shEVBrQ4BLqsuYw5j6vQGCFJGMLBxr5nu2XvUWFEAR",
    "fee": "1",
    "height": 1189856,
    "id": "A56FrxqFp6Pw9tyqgyDsUugfZMydmzRCqeTwpMnRijCJ",
    "minSponsoredAssetFee": null,
    "proofs": Array [
      "VZPHjQ2ZNmn1zDhMEb4V7noS5qACusF9azzCJ23mQHPkUFtPGDWED9XTWLR54p6ZQYJrosZgXyskjScRD8qBZon",
    ],
    "sender": "3PEGsQ1QSj1P7bX7RuGcouc8p9LHkD7wyPy",
    "senderPublicKey": "9hdJNctMBwRf4aWS7GMwZrZAi4PndLqG8GRjL8tZiwTm",
    "timestamp": 2018-09-26T10:36:42.466Z,
    "type": 14,
    "version": 1,
  },
}
`;

exports[`sponsorship transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "J8shEVBrQ4BLqsuYw5j6vQGCFJGMLBxr5nu2XvUWFEAR",
        "fee": "1",
        "height": 1189856,
        "id": "A56FrxqFp6Pw9tyqgyDsUugfZMydmzRCqeTwpMnRijCJ",
        "minSponsoredAssetFee": null,
        "proofs": Array [
          "VZPHjQ2ZNmn1zDhMEb4V7noS5qACusF9azzCJ23mQHPkUFtPGDWED9XTWLR54p6ZQYJrosZgXyskjScRD8qBZon",
        ],
        "sender": "3PEGsQ1QSj1P7bX7RuGcouc8p9LHkD7wyPy",
        "senderPublicKey": "9hdJNctMBwRf4aWS7GMwZrZAi4PndLqG8GRjL8tZiwTm",
        "timestamp": 2018-09-26T10:36:42.466Z,
        "type": 14,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "ErNBkwEfcBAVKKPbQzdfZzmTSFvw2tg6WgUFFZVRwP9g",
        "fee": "1",
        "height": 1189863,
        "id": "GGFdKLjvMnjCdmZRjuc6z9QjD8PCHZywNFBSwf62xTpS",
        "minSponsoredAssetFee": "0.001",
        "proofs": Array [
          "5staf6NkUcHYLQQ3EU39i4HoPz4Mx7GeNuqtjwnQXF1LLsQvHiQfMJJtHtAUCkQKct37oXZQsZijnnRGNWpRyb9N",
        ],
        "sender": "3PCHcfG8AFREXsJBWm7cBmd5Yu4kphXwQYk",
        "senderPublicKey": "5LqikT6VL7caeAEN9Ddnu1SkkuVPaFSEKnxvoTq2iZg5",
        "timestamp": 2018-09-26T10:44:14.768Z,
        "type": 14,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;

exports[`transfer transactions service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "0.00093605",
    "assetId": "AnERqFRffNVrCbviXbDEdzrU6ipXCP5Y1PKpFdRnyQAy",
    "attachment": "",
    "fee": "0.001",
    "feeAsset": "WAVES",
    "height": 554167,
    "id": "GN5SSawWUwodvAcHV2d96pe7HgFqvxoEAU9FCW9MUphE",
    "recipient": "3PMYPcrwE844vTzqDxxeJMTQZYiP5GQSmvh",
    "sender": "3P23fi1qfVw6RVDn4CH2a5nNouEtWNQ4THs",
    "senderPublicKey": "9pfdqs3WwYv3d4zN2ekHSqxcPnE7zKceMJXq1zZxAyd4",
    "signature": "3hXbwJ1gBu5JeqQqBZkwegMZzn1GSTa6jj31eJ8GGpbjRxgFRjdvvLgHUayRccgTKBhi8uNLDrSmrgVr9nfT21DC",
    "timestamp": 2017-06-25T14:11:59.285Z,
    "type": 4,
  },
}
`;

exports[`transfer transactions service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "0.00093605",
        "assetId": "AnERqFRffNVrCbviXbDEdzrU6ipXCP5Y1PKpFdRnyQAy",
        "attachment": "",
        "fee": "0.001",
        "feeAsset": "WAVES",
        "height": 554167,
        "id": "GN5SSawWUwodvAcHV2d96pe7HgFqvxoEAU9FCW9MUphE",
        "recipient": "3PMYPcrwE844vTzqDxxeJMTQZYiP5GQSmvh",
        "sender": "3P23fi1qfVw6RVDn4CH2a5nNouEtWNQ4THs",
        "senderPublicKey": "9pfdqs3WwYv3d4zN2ekHSqxcPnE7zKceMJXq1zZxAyd4",
        "signature": "3hXbwJ1gBu5JeqQqBZkwegMZzn1GSTa6jj31eJ8GGpbjRxgFRjdvvLgHUayRccgTKBhi8uNLDrSmrgVr9nfT21DC",
        "timestamp": 2017-06-25T14:11:59.285Z,
        "type": 4,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "0.007",
        "assetId": "WAVES",
        "attachment": "",
        "fee": "0.001",
        "feeAsset": "WAVES",
        "height": 240868,
        "id": "Co8JB3md1hsnFKYS2xonipBFyQcB7qskyosoJf6YhBi1",
        "recipient": "3PJkWhTJXrYWiSj6sxv9aoUrzoBbGZmzvQf",
        "sender": "3P2b1YqpGNb57ftMQN5be25iKowq65GmkZ7",
        "senderPublicKey": "J9LBb9ZixtDiLFxXocGXt69JU5vConrGYh7yM1mnAPWQ",
        "signature": "4QgAFzCvEhMEEWuYvuPU8tw4bhSKzrfFW2RrhkEYFc82EVdmUV7HqRehpTxsvQ9V2dYd4yp4Ezez9RqVwDSKr2uz",
        "timestamp": 2016-11-21T07:01:42.156Z,
        "type": 4,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
  ],
}
`;
